[package]
name = "humantalk"
version = "0.1.1"
edition = "2021"
description = "A simple libary for better end-user communication"
license = "MIT"
documentation = "https://docs.rs/humantalk"
homepage = "https://github.com/werdl/humantalk"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.8"
rustc_version = "0.4.0"
